@@ -1,6 +1,7 @@
 ﻿Version 1.5:
 	Fixed tag overlaps code bug
 	Added "Tag Size" Option for custom tag scale
+	Added ability to 'click through' tags, when Double-Click option is set
 
 Version 1.4:
 	Use bigger font size for tags
